# Argochain

./: .dockerignore  .gitignore  .syncignore  BUG_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURE.md  KEYS.md  NOMINATOR.md  Node_Deployment.md  Plan.toml  QUESTIONS.md  README.md  SECURITY.md  STYLE_GUIDE.md  SecurityAuditJun2025.md  Test_Report.md  audit_report.md  bootnodes.txt  build-keygen.py  build_log.json  chatty.md  customSpec.json  customSpecRaw.json  diff_dependencies.txt  docker-compose.yaml  filtered_frontier.txt  filtered_project.txt  init-and-run.sh  init.sh  integrate.py  merkleized-metadata-0.1.0.crate  minerva.json  minervaRaw.json  new_minervaRaw.json  nohup.out  project_dependencies.txt  (+12 more)
.cargo/: config.toml
.github/workflows/: ci.yml  main.yml  release.yml  rust.yml
.mps/: migration.xml  modules.xml
.wake/extension/: local-local-chain-9ca4d4e9-2e0f-4c69-b5fd-2940c7f34b2b.json
Docker/: README.md  Readme.md  init-and-run.sh  install.md  rotate_keys_docker.sh
Notebook/: Rajib.md
Notebook/Nahid/: README.md
Notebook/Rajib/: README.md
app/: main.py
app/discovery/: beacon.py
beacon_tmp/app/discovery/: node.py
client/api/: Cargo.toml
client/api/src/: backend.rs
client/babe-consensus-data-provider/: Cargo.toml
client/babe-consensus-data-provider/src/: lib.rs
client/cli/: Cargo.toml
client/consensus/: Cargo.toml
client/consensus/src/: lib.rs
client/db/: Cargo.toml
client/db/src/: parity_db_adapter.rs
client/ecdsa-keyring/: Cargo.toml
client/ecdsa-keyring/src/: lib.rs
client/mapping-sync/: Cargo.toml
client/mapping-sync/src/: lib.rs  worker.rs
client/rpc/: Cargo.toml
client/rpc-core/: Cargo.toml
client/rpc-core/src/: eth.rs  eth_pubsub.rs  lib.rs  net.rs  txpool.rs  web3.rs
client/rpc/src/: eth_pubsub.rs  lib.rs  signer.rs
client/storage/: Cargo.toml
deployment_test_report/: Node_Deployment.md  Secure_WebSocket.md
docs/: PULL_REQUESTS.md  QUESTIONS.md
frame/base-fee/: Cargo.toml
frame/base-fee/src/: lib.rs  tests.rs
frame/dynamic-fee/: Cargo.toml
frame/dynamic-fee/src/: lib.rs  tests.rs
frame/ethereum/: Cargo.toml
frame/ethereum/src/: lib.rs  mock.rs
frame/evm/: Cargo.toml
frame/evm-chain-id/: Cargo.toml
frame/evm-chain-id/src/: lib.rs
frame/evm/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
frame/hotfix-sufficients/: Cargo.toml
frame/hotfix-sufficients/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
frame/nomination-pools/: Cargo.toml
frame/nomination-pools/benchmarking/: Cargo.toml
frame/nomination-pools/benchmarking/src/: lib.rs  mock.rs
frame/nomination-pools/fuzzer/: Cargo.toml
frame/nomination-pools/runtime-api/: Cargo.toml
frame/nomination-pools/src/: lib.rs  migration.rs  mock.rs  tests.rs
frame/nomination-pools/test-staking/: Cargo.toml
frame/pallet-counter/: Cargo.toml  LOW_VULNERABILITY_FIXES.md  SECURITY_UPGRADE.md
frame/pallet-counter/src/: benchmarking.rs  lib.rs  tests.rs
merkleized-metadata-0.1.0/: Cargo.toml.orig
merkleized-metadata-0.1.0/.github/workflows/: fmt.yml
merkleized-metadata-0.1.0/src/: extrinsic_decoder.rs  lib.rs  types.rs
node/: Cargo.toml  build.rs
node/src/: argo_bootstrap.rs  benchmarking.rs  bootstrap.rs  chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  lib.rs  main.rs  network.rs  rpc.rs  select_chain.rs  service.rs  service.rs.bak
node/src/rpc/: eth.rs  mod.rs
pallets/counter/: Cargo.toml
pallets/evm/: Cargo.toml
pallets/evm-asset/: Cargo.toml
pallets/evm/src/: benchmarking.rs  lib.rs  weights.rs
pallets/minting/: Cargo.toml
pallets/pallet-counter/: Cargo.toml
pallets/pallet-counter/src/: benchmarking.rs  lib.rs  test.rs  weights.rs
pallets/pallet-mint/: Cargo.toml
pallets/pallet-mint-burn-evm/: Cargo.toml
pallets/pallet-mint-burn-evm/src/: lib.rs
pallets/pallet-mint/src/: lib.rs  mock.rs
pallets/pallet-storage/: Cargo.toml
pallets/pallet-string-storage/: Cargo.toml
pallets/pallet-string-storage/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  weights.rs
precompiles/: Cargo.toml
precompiles/src/: lib.rs  precompile_set.rs
precompiles/tests-external/: Cargo.toml
primitives/account/: Cargo.toml
primitives/consensus/: Cargo.toml
primitives/dynamic-fee/: Cargo.toml
primitives/ethereum/: Cargo.toml
primitives/evm/: Cargo.toml
primitives/merkleized-metadata/: .cargo_vcs_info.json  Cargo.toml  README.md
primitives/rpc/: Cargo.toml
primitives/self-contained/: Cargo.toml
primitives/storage/: Cargo.toml
primitives/tracing/: Cargo.toml
research/: Makefile  Tokenomics.md
runtime/: Cargo.toml  build.rs  rustc-ice-2024-08-23T17_30_18-36157.txt  rustc-ice-2024-08-23T17_40_46-38029.txt  rustc-ice-2024-08-23T17_46_59-39230.txt  rustc-ice-2024-08-23T17_48_46-39601.txt  rustc-ice-2024-08-23T17_53_47-40532.txt  rustc-ice-2024-08-23T18_00_43-41795.txt  rustc-ice-2024-08-23T18_04_30-42530.txt  rustc-ice-2024-08-23T18_05_55-42841.txt  rustc-ice-2024-08-23T18_09_00-43439.txt  rustc-ice-2024-08-23T18_14_06-44392.txt  rustc-ice-2024-08-23T18_23_47-46117.txt  rustc-ice-2024-08-23T18_24_24-46292.txt  rustc-ice-2024-08-23T18_29_10-47177.txt  rustc-ice-2024-08-23T18_48_00-50494.txt  rustc-ice-2024-08-23T18_54_56-51754.txt  rustc-ice-2024-08-23T18_56_44-52128.txt  rustc-ice-2024-08-23T18_59_13-52620.txt  rustc-ice-2024-08-23T19_09_56-54319.txt  rustc-ice-2024-08-23T20_12_37-60617.txt  rustc-ice-2024-08-23T20_13_39-60979.txt  rustc-ice-2024-08-23T20_32_25-10806.txt  rustc-ice-2024-12-30T15_48_39-83789.txt  rustc-ice-2024-12-30T15_49_02-83874.txt
runtime/src/: apis.rs  assets_api.rs  constants.rs  genesis_config_presets.rs  impls.rs  lib.rs  lib.rs.bak  migrations.rs  mint_precompile.rs  precompiles.rs  test.rs  tests.rs  voter_bags.rs
runtime/src/configs/: mod.rs
solutions/NewSolution/: NewSolution.msd
specs/: customSpecRaw.json
substrate/docs/: Upgrading-2.0-to-3.0.md
substrate/frame/: Cargo.toml  README.md
substrate/test-utils/: Cargo.toml
umbrella/: Cargo.toml
umbrella/src/: lib.rs
(+653 files in other folders)
